force-app/main/default/objects/Implementation_Request__c/Implementation_Request__c.object-meta.xml
<CustomObject>
    <description>Object to be used to store DDfW Implementation Requests.  Records will be created from a screen flow from Opportunity.  BZAP-14816</description>
    <label>Implementation Request</label>
    <nameField>
        <displayFormat>IR-{0}</displayFormat>
        <label>Implementation Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>