force-app/main/default/objects/Implementation_Request__c/fields/Admin_Access_Date__c.field-meta.xml
<CustomField>
    <fullName>Admin_Access_Date__c</fullName>
    <label>Admin Access Date</label>
    <type>Date</type>
</CustomField>