force-app/main/default/objects/Implementation_Request__c/fields/Change_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Type__c</fullName>
    <label>Change Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Account/Netsuite ID</fullName>
            </value>
            <value>
                <fullName>Payment Protocol</fullName>
            </value>
            <value>
                <fullName>Portal Company Name Change</fullName>
            </value>
            <value>
                <fullName>Subteam Name Change</fullName>
            </value>
            <value>
                <fullName>Address Restriction</fullName>
            </value>
            <value>
                <fullName>Bulk Group Upload</fullName>
            </value>
            <value>
                <fullName>Merge Team Accounts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partial Offboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>