force-app/main/default/objects/Implementation_Request__c/fields/Desired_Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Fulfillment_Date__c</fullName>
    <label>Desired Fulfillment Date</label>
    <type>Date</type>
</CustomField>