force-app/main/default/objects/Implementation_Request__c/fields/Offboard_Type__c.field-meta.xml
<CustomField>
    <fullName>Offboard_Type__c</fullName>
    <label>Offboard Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>