force-app/main/default/objects/Implementation_Request__c/fields/Portal_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Company_Name__c</fullName>
    <label>Portal Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>