force-app/main/default/objects/Implementation_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Waiting for Implementation</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Sent to Eng</fullName>
            </value>
            <value>
                <fullName>Waiting for Rep</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>