force-app/main/default/objects/Implementation_Request__c/fields/Subteam_Name__c.field-meta.xml
<CustomField>
    <fullName>Subteam_Name__c</fullName>
    <label>Subteam Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>