force-app/main/default/objects/Implementation_Request__c/fields/Subteam_s__c.field-meta.xml
<CustomField>
    <fullName>Subteam_s__c</fullName>
    <label>Subteam(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>