force-app/main/default/objects/Implementation_Request__c/listViews/DDfW_Implementation_Implementation_Request.listView-meta.xml
<ListView>
    <fullName>DDfW_Implementation_Implementation_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>DDfW Implementation</label>
    <queue>DDfW_Implementation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>